added discord messaging functionality

--- a/src/test_table.html
+++ b/src/test_table.html
@@ -30,6 +30,7 @@
             <th>Total Miles</th>
             <th>Price ($)</th>
             <th>Dollars per Mile ($/mile)</th>
+            <th>Contact Number</th>
         </tr>
     </thead>
     <tbody>
@@ -38,30 +39,35 @@
             <td>1200</td>
             <td>3000</td>
             <td>2.50</td>
+            <td>(202) 555-0123</td>
         </tr>
         <tr>
             <td>Flatbed</td>
             <td>800</td>
             <td>1800</td>
             <td>2.25</td>
+            <td>(415) 555-0145</td>
         </tr>
         <tr>
             <td>Dry Van</td>
             <td>1500</td>
             <td>3500</td>
             <td>2.33</td>
+            <td>(718) 555-0198</td>
         </tr>
         <tr>
             <td>Container</td>
             <td>600</td>
             <td>1400</td>
             <td>2.33</td>
+            <td>(303) 555-0174</td>
         </tr>
         <tr>
             <td>Hazmat</td>
             <td>1000</td>
             <td>4500</td>
             <td>4.50</td>
+            <td>(512) 555-0156</td>
         </tr>
     </tbody>
 </table>
